# pidgin-lwqq

./: .clang-format  .clang_complete  .gitignore  .gitmodules  .vimrc  AUTHORS  CMakeLists.txt  CREDIT  ChangeLog  KnownIssue.md  README-en.md  README.md  config.h.in  debug.sh
adium/: QQAccount.h  QQAccount.m  QQAccountView.xib  QQAccountViewController.h  QQAccountViewController.m  QQPlugin.h  QQPlugin.m  QQService.h  QQService.m  adium-lwqq.pch  adium-lwqq.plist  config.h
adium/adium-lwqq.xcodeproj/: project.pbxproj
adium/adium-lwqq.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
adium/adium-lwqq.xcodeproj/project.xcworkspace/xcshareddata/: adium-lwqq.xccheckout
adium/adium-lwqq.xcodeproj/project.xcworkspace/xcuserdata/xiehuc.xcuserdatad/: UserInterfaceState.xcuserstate
adium/adium-lwqq.xcodeproj/xcuserdata/xiehuc.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
adium/adium-lwqq.xcodeproj/xcuserdata/xiehuc.xcuserdatad/xcschemes/: LwqqWrapperPlugin.xcscheme  xcschememanagement.plist
cmake/: FindEV.cmake  FindEv.cmake  FindGLIB2.cmake  FindLibPurple.cmake  FindLwqq.cmake  FindMozJS.cmake  FindSqlite3.cmake  Gettext.cmake
debian/: changelog  control  copyright  rules
include/libghttp/: ghttp.c  ghttp.h  ghttp_constants.h  http_base64.c  http_base64.h  http_date.c  http_date.h  http_global.h  http_hdrs.c  http_hdrs.h  http_req.c  http_req.h  http_resp.c  http_resp.h  http_trans.c  http_trans.h  http_uri.c  http_uri.h
include/libghttp/.deps/: libghttp_la-ghttp.Plo  libghttp_la-http_base64.Plo  libghttp_la-http_date.Plo  libghttp_la-http_hdrs.Plo  libghttp_la-http_req.Plo  libghttp_la-http_resp.Plo  libghttp_la-http_trans.Plo  libghttp_la-http_uri.Plo
include/liblwqq/: async.c  async.h  http.c  http.h  info.c  info.h  json.h  logger.h  login.c  login.h  md5.c  msg.c  msg.h  queue.h  smemory.h  type.c  type.h  unicode.c  unicode.h  url.c  url.h
po/: CMakeLists.txt  POTFILES.in.in  en.po  pidgin-lwqq.pot  zh_CN.po
res/: CMakeLists.txt  hash.js  smiley.txt
res/qqfaces/: Makefile.am  Makefile.in  theme
res/qqfaces_static/: theme
server/sae/: images.php
src/: .clang_complete  CMakeLists.txt  Localizable.h  async.c  async_purple.c  background.c  background.h  cgroup.c  cgroup.h  ft.c  http.c  http_curl.c  js.c  js.h  login.c  qq_async.c  qq_async.h  qq_fake.c  qq_types.c  qq_types.h  remote.c  remote.h  test.c  translate.c  translate.h  tranverse.c  tranverse.h  trex.c  trex.h  webqq.c  webqq.h  win.c  win.h
src/liblwqq/: async.c  async.h  http.c  http.h  http_curl.c  info.c  info.h  internal.c  internal.h  json.c  logger.c  logger.h  login.c  login.h  lwdb.c  lwdb.h  md5.h  msg.c  msg.h  smemory.c  smemory.h  swsqlite.c  swsqlite.h  type.c  type.h  url.c  url.h  util.c  util.h  utility.c  utility.h  vplist.c  vplist.h
ubuntu-online-account/: CMakeLists.txt  account-plugin.c  account-plugin.h  empathy-accounts-plugin.h  webqq-im.service  webqq.provider
