faceimgdir=${pkgdatadir}/icons/qqfaces
faceimg_DATA=\
	0.gif    109.gif  118.gif  127.gif  14.gif  23.gif  32.gif\
	41.gif  50.gif  5.gif   69.gif  78.gif  87.gif  96.gif\
	100.gif  10.gif   119.gif  128.gif  15.gif  24.gif  33.gif\
	42.gif  51.gif  60.gif  6.gif   79.gif  88.gif  97.gif\
	101.gif  110.gif  11.gif   129.gif  16.gif  25.gif  34.gif\
	43.gif  52.gif  61.gif  70.gif  7.gif   89.gif  98.gif\
	102.gif  111.gif  120.gif  12.gif   17.gif  26.gif  35.gif\
	44.gif  53.gif  62.gif  71.gif  80.gif  8.gif   99.gif\
	103.gif  112.gif  121.gif  130.gif  18.gif  27.gif  36.gif\
	45.gif  54.gif  63.gif  72.gif  81.gif  90.gif  9.gif\
	104.gif  113.gif  122.gif  131.gif  19.gif  28.gif  37.gif\
	46.gif  55.gif  64.gif  73.gif  82.gif  91.gif\
	105.gif  114.gif  123.gif  132.gif  1.gif   29.gif  38.gif\
	47.gif  56.gif  65.gif  74.gif  83.gif  92.gif\
	106.gif  115.gif  124.gif  133.gif  20.gif  2.gif   39.gif\
	48.gif  57.gif  66.gif  75.gif  84.gif  93.gif\
	107.gif  116.gif  125.gif  134.gif  21.gif  30.gif  3.gif\
	49.gif  58.gif  67.gif  76.gif  85.gif  94.gif\
	108.gif  117.gif  126.gif  13.gif   22.gif  31.gif  40.gif\
	4.gif   59.gif  68.gif  77.gif  86.gif  95.gif

EXTRA_DIST = $(faceimg_DATA) 
